--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "17.x",
     "react-player": "2.10.0",
     "umi": "^3.5.20",
-    "umi-request": "^1.4.0"
+    "umi-request": "^1.4.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
