--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "antd": "~4.15.5",
     "lib-flexible": "^0.3.2",
     "react": "17.x",
     "react-dom": "17.x",
